--- a/Project IT Park HW/MainWindow.xaml
+++ b/Project IT Park HW/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_IT_Park_HW"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="530" Width="800">
     <Grid>
         <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="43,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" FontWeight="Bold"/>
         <ComboBox HorizontalAlignment="Left" Margin="43,133,0,0" VerticalAlignment="Top" Width="200" FontWeight="Bold">
@@ -13,13 +13,26 @@
             <ListBoxItem Content="Archer" FontWeight="Bold" FontSize="14"/>
             <ListBoxItem Content="Mage" FontWeight="Bold" FontSize="14"/>
         </ComboBox>
-        <Label Content="Сhoice of Profession:" HorizontalAlignment="Left" Margin="43,102,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
+        <Label Content="Unit class selection:" HorizontalAlignment="Left" Margin="43,102,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
         <Label Content="Name:" HorizontalAlignment="Left" Margin="43,37,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
-        <GroupBox Header="Базовые характеристики:" Margin="295,39,30,170" FontWeight="Bold" FontSize="16"/>
-        <Label x:Name="lblStrength" Content="Strength" HorizontalAlignment="Left" Margin="320,77,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblAgility" Content="Agility" HorizontalAlignment="Left" Margin="320,115,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblIntellect" Content="Intellect" HorizontalAlignment="Left" Margin="320,152,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblEndurance" Content="Endurance" HorizontalAlignment="Left" Margin="320,191,0,0" VerticalAlignment="Top"/>
+        <GroupBox Header="Basic characteristics:" Margin="396,187,183,10" FontWeight="Bold" FontSize="16"/>
+        <Label x:Name="lblStrength" Content="Strength:" HorizontalAlignment="Left" Margin="396,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+        <Label x:Name="lblAgility" Content="Agility:" HorizontalAlignment="Left" Margin="455,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+        <Label x:Name="lblIntellect" Content="Intellect:" HorizontalAlignment="Left" Margin="504,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+        <Label x:Name="lblEndurance" Content="Endurance:" HorizontalAlignment="Left" Margin="555,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+        <GroupBox Header="Unit list:" Margin="43,187,557,10" FontWeight="Bold" FontSize="16"/>
+        <GroupBox Header="Unit class:" Margin="248,187,409,10" FontWeight="Bold" FontSize="16"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,229,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,255,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,281,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,306,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,332,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,358,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,384,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,410,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,229,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,436,0,0" VerticalAlignment="Top" Width="200"/>
+        <Label Content="Label" HorizontalAlignment="Left" Margin="43,462,0,0" VerticalAlignment="Top" Width="200"/>
 
     </Grid>
 </Window>
