--- a/Project IT Park HW/MainWindow.xaml
+++ b/Project IT Park HW/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project_IT_Park_HW"
         mc:Ignorable="d"
-        Title="MainWindow" Height="530" Width="800">
-    <Grid>
-        <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="43,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" FontWeight="Bold"/>
+        Title="MainWindow" Height="530" Width="850">
+    <Grid Margin="0,0,0,-6">
+        <TextBox x:Name="txtName" HorizontalAlignment="Left" Margin="43,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" FontWeight="Bold" Height="18"/>
         <ComboBox x:Name="cmbClass" HorizontalAlignment="Left" Margin="43,86,0,0" VerticalAlignment="Top" Width="200" FontWeight="Bold">
             <ListBoxItem Content="Warrior" FontWeight="Bold" FontSize="14"/>
             <ListBoxItem Content="Archer" FontWeight="Bold" FontSize="14"/>
@@ -15,17 +15,44 @@
         </ComboBox>
         <Label Content="Unit class selection:" HorizontalAlignment="Left" Margin="43,55,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
         <Label Content="Name:" HorizontalAlignment="Left" Margin="43,10,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
-        <GroupBox Header="Basic characteristics:" Margin="396,187,183,10" FontWeight="Bold" FontSize="16"/>
-        <Label x:Name="lblStrength" Content="Strength:" HorizontalAlignment="Left" Margin="396,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
-        <Label x:Name="lblAgility" Content="Agility:" HorizontalAlignment="Left" Margin="455,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
-        <Label x:Name="lblIntellect" Content="Intellect:" HorizontalAlignment="Left" Margin="504,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
-        <Label x:Name="lblEndurance" Content="Endurance:" HorizontalAlignment="Left" Margin="555,205,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="10"/>
+        <Label x:Name="lblStrength" Content="damage:" HorizontalAlignment="Left" Margin="347,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblAgility" Content="protection:" HorizontalAlignment="Left" Margin="420,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblIntellect" Content="Physical" HorizontalAlignment="Left" Margin="349,194,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblEndurance" Content="Magic" HorizontalAlignment="Left" Margin="514,194,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
 
         <Button x:Name="btnCreate" Content="Create" HorizontalAlignment="Left" Margin="43,113,0,0" VerticalAlignment="Top" Width="200" FontSize="16" FontWeight="Bold" Click="btnCreate_Click"/>
-        <ListBox x:Name="UnitList" Margin="43,205,557,10"/>
-        <Label Content="Unit List:" HorizontalAlignment="Left" Margin="43,174,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="16"/>
-        <Label Content="Unit class:" HorizontalAlignment="Left" Margin="248,174,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
-        <ListBox x:Name="UnitClass" Margin="248,205,409,10"/>
+        <ListBox x:Name="UnitList" Margin="43,233,607,10"/>
+        <Label Content="Unit List:" HorizontalAlignment="Left" Margin="43,206,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="13"/>
+        <Label Content="Unit class:" HorizontalAlignment="Left" Margin="248,206,0,0" VerticalAlignment="Top" FontSize="13" FontWeight="Bold"/>
+        <ListBox x:Name="UnitClass" Margin="248,233,516,10"/>
+        <ListBox Margin="339,233,436,10"/>
+        <ListBox Margin="419,233,356,10"/>
+        <ListBox Margin="499,233,276,10"/>
+        <ListBox Margin="657,233,121,10"/>
+        <GroupBox Header="Strength:" Margin="248,2,208,467" FontSize="14" FontWeight="Bold"/>
+        <GroupBox Header="Agility:" Margin="248,43,208,426" FontSize="14" FontWeight="Bold"/>
+        <GroupBox Header="Intellect:" Margin="248,88,208,381" FontSize="14" FontWeight="Bold"/>
+        <GroupBox Header="Endurance:" Margin="248,133,208,336" FontSize="14" FontWeight="Bold"/>
+        <Label x:Name="lblStrength_Copy" Content="damage:" HorizontalAlignment="Left" Margin="507,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblAgility_Copy" Content="protection:" HorizontalAlignment="Left" Margin="580,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblIntellect_Copy" Content="Physical" HorizontalAlignment="Left" Margin="429,194,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblEndurance_Copy" Content="Magic" HorizontalAlignment="Left" Margin="594,194,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <ListBox Margin="579,233,198,10"/>
+        <ListBox Margin="734,233,44,10"/>
+        <Label x:Name="lblAgility_Copy1" Content="Health:" HorizontalAlignment="Left" Margin="668,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Label x:Name="lblAgility_Copy2" Content="Mana:" HorizontalAlignment="Left" Margin="748,207,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
+        <Button Content="-" HorizontalAlignment="Left" Margin="357,14,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,14,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" Height="36" FontWeight="Bold" FontSize="20"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="445,14,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <Button Content="-" HorizontalAlignment="Left" Margin="357,58,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,58,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" Height="36" FontWeight="Bold" FontSize="20"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="445,58,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <Button Content="-" HorizontalAlignment="Left" Margin="357,102,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,102,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" Height="36" FontWeight="Bold" FontSize="20"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="445,102,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <Button Content="-" HorizontalAlignment="Left" Margin="357,148,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
+        <TextBox HorizontalAlignment="Left" Margin="400,148,0,0" Text="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="37" Height="36" FontWeight="Bold" FontSize="20"/>
+        <Button Content="+" HorizontalAlignment="Left" Margin="445,148,0,0" VerticalAlignment="Top" Height="36" Width="36" FontWeight="Bold" FontSize="18"/>
 
     </Grid>
 </Window>
