--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </Image.RenderTransform>
         </Image>
-        <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="34,49,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" FontWeight="Bold"/>
+        <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="34,49,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" FontWeight="Bold" TextChanged="name_TextChanged" GotFocus="name_GotFocus"/>
         <ComboBox x:Name="proffession" HorizontalAlignment="Left" Margin="212,50,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
             <ListBoxItem Content="Warrior"/>
             <ListBoxItem Content="Archer"/>
@@ -42,7 +42,7 @@
         <Button x:Name="removeEndurance" Content="-" HorizontalAlignment="Left" Margin="212,290,0,0" VerticalAlignment="Top" Width="24" IsEnabled="False" FontSize="16" FontWeight="Bold" RenderTransformOrigin="0.632,3.847"/>
         <Label x:Name="freePoints" Content="10" HorizontalAlignment="Left" Margin="254,347,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label Content="Free points" HorizontalAlignment="Left" Margin="212,316,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold"/>
-        <Button x:Name="buttonAdd" Content="Add" HorizontalAlignment="Left" Margin="362,303,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold"/>
+        <Button x:Name="buttonAdd" Content="Add" HorizontalAlignment="Left" Margin="362,303,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold" Click="buttonAdd_Click"/>
         <Button x:Name="buttonRemove" Content="Remove" HorizontalAlignment="Left" Margin="433,303,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold"/>
         <Button x:Name="buttonUpdate" Content="Update" HorizontalAlignment="Left" Margin="362,334,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold"/>
         <Label Content="Physical damage" HorizontalAlignment="Left" Margin="517,80,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="156" VerticalContentAlignment="Center" FontSize="16" FontWeight="Bold"/>
