--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfCharacterEditor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Character Editor" Height="450" Width="800">
     <Grid>
         <Image x:Name="imageCharacter" HorizontalAlignment="Left" Height="300" VerticalAlignment="Top" Width="150" Margin="19,88,0,0" RenderTransformOrigin="0.5,0.5">
             <Image.RenderTransform>
@@ -18,7 +18,7 @@
             </Image.RenderTransform>
         </Image>
         <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="34,49,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" FontWeight="Bold" TextChanged="name_TextChanged" GotFocus="name_GotFocus"/>
-        <ComboBox x:Name="proffession" HorizontalAlignment="Left" Margin="212,50,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+        <ComboBox x:Name="proffession" HorizontalAlignment="Left" Margin="212,50,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" SelectionChanged="proffession_SelectionChanged" SelectedIndex="0">
             <ListBoxItem Content="Warrior"/>
             <ListBoxItem Content="Archer"/>
             <ListBoxItem Content="Wizard"/>
@@ -27,8 +27,7 @@
         <Label x:Name="agility" Content="10" HorizontalAlignment="Left" Margin="254,159,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.234,-0.056" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label x:Name="intelligence" Content="10" HorizontalAlignment="Left" Margin="254,220,0,0" VerticalAlignment="Top" FontSize="18" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold"/>
         <Label x:Name="endurance" Content="10" HorizontalAlignment="Left" Margin="254,284,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <ListBox x:Name="listCharacter" HorizontalAlignment="Left" Height="245" Margin="362,50,0,0" VerticalAlignment="Top" Width="131"/>
-        <Button x:Name="addStrength" Content="+" HorizontalAlignment="Left" Margin="308,102,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
+                <Button x:Name="addStrength" Content="+" HorizontalAlignment="Left" Margin="308,102,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="addAgility" Content="+" HorizontalAlignment="Left" Margin="308,165,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="addIntelligence" Content="+" HorizontalAlignment="Left" Margin="308,226,0,0" VerticalAlignment="Top" Width="24" RenderTransformOrigin="0.57,8.304" IsDefault="True" FontSize="16" FontWeight="Bold"/>
         <Button x:Name="addEndurance" Content="+" HorizontalAlignment="Left" Margin="308,290,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
@@ -58,6 +57,7 @@
         <Label Content="Magic" HorizontalAlignment="Left" Margin="517,224,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="156" VerticalContentAlignment="Center" FontSize="16" FontWeight="Bold"/>
         <Label x:Name="Magic" Content="10" HorizontalAlignment="Left" Margin="674,223,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="18" FontWeight="Bold"/>
         <Button x:Name="buttonDelete" Content="Delete" HorizontalAlignment="Left" Margin="433,334,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold"/>
+        <ListBox x:Name="listCharacter" Margin="362,50,307,152" Height="232" Width="131" Loaded="listCharacter_Loaded"/>
 
     </Grid>
 </Window>
