--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -18,7 +18,8 @@
             </Image.RenderTransform>
         </Image>
         <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="34,49,0,0" TextWrapping="Wrap" Text="Name" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" FontWeight="Bold" TextChanged="name_TextChanged" GotFocus="name_GotFocus"/>
-        <ComboBox x:Name="proffession" HorizontalAlignment="Left" Margin="212,50,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" SelectionChanged="proffession_SelectionChanged" SelectedIndex="1">
+        <ComboBox x:Name="proffession" HorizontalAlignment="Left" Margin="212,50,0,0" VerticalAlignment="Top" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" SelectionChanged="proffession_SelectionChanged" SelectedIndex="0">
+            <ListBoxItem Content="Сharacter"/>
             <ListBoxItem Content="Warrior"/>
             <ListBoxItem Content="Archer"/>
             <ListBoxItem Content="Wizard"/>
@@ -27,18 +28,18 @@
         <Label x:Name="agility" Content="10" HorizontalAlignment="Left" Margin="254,159,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.234,-0.056" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label x:Name="intelligence" Content="10" HorizontalAlignment="Left" Margin="254,220,0,0" VerticalAlignment="Top" FontSize="18" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold"/>
         <Label x:Name="endurance" Content="10" HorizontalAlignment="Left" Margin="254,284,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-                <Button x:Name="addStrength" Content="+" HorizontalAlignment="Left" Margin="308,102,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="addAgility" Content="+" HorizontalAlignment="Left" Margin="308,165,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="addIntelligence" Content="+" HorizontalAlignment="Left" Margin="308,226,0,0" VerticalAlignment="Top" Width="24" RenderTransformOrigin="0.57,8.304" IsDefault="True" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="addEndurance" Content="+" HorizontalAlignment="Left" Margin="308,290,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="removeStrength" Content="-" HorizontalAlignment="Left" Margin="212,102,0,0" VerticalAlignment="Top" Width="24" IsEnabled="False" FontSize="16" FontWeight="Bold"/>
+        <Button x:Name="addStrength" Content="+" HorizontalAlignment="Left" Margin="308,102,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="addStrength_Click"/>
+        <Button x:Name="addAgility" Content="+" HorizontalAlignment="Left" Margin="308,165,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="addAgility_Click"/>
+        <Button x:Name="addIntelligence" Content="+" HorizontalAlignment="Left" Margin="308,226,0,0" VerticalAlignment="Top" Width="24" RenderTransformOrigin="0.57,8.304" IsDefault="True" FontSize="16" FontWeight="Bold" Click="addIntelligence_Click"/>
+        <Button x:Name="addEndurance" Content="+" HorizontalAlignment="Left" Margin="308,290,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="addEndurance_Click"/>
+        <Button x:Name="removeStrength" Content="-" HorizontalAlignment="Left" Margin="212,102,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="removeStrength_Click"/>
         <Label Content="Strength" HorizontalAlignment="Left" Margin="212,71,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="16" FontWeight="Bold"/>
         <Label Content="Agility" HorizontalAlignment="Left" Margin="212,128,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" FontSize="16" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label Content="Intelligence" HorizontalAlignment="Left" Margin="212,190,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" FontSize="16" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
         <Label Content="Endurance" HorizontalAlignment="Left" Margin="212,251,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold"/>
-        <Button x:Name="removeAgility" Content="-" HorizontalAlignment="Left" Margin="212,165,0,0" VerticalAlignment="Top" Width="24" IsEnabled="False" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="removeIntelligence" Content="-" HorizontalAlignment="Left" Margin="212,226,0,0" VerticalAlignment="Top" Width="24" IsEnabled="False" FontSize="16" FontWeight="Bold"/>
-        <Button x:Name="removeEndurance" Content="-" HorizontalAlignment="Left" Margin="212,290,0,0" VerticalAlignment="Top" Width="24" IsEnabled="False" FontSize="16" FontWeight="Bold" RenderTransformOrigin="0.632,3.847"/>
+        <Button x:Name="removeAgility" Content="-" HorizontalAlignment="Left" Margin="212,165,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="removeAgility_Click"/>
+        <Button x:Name="removeIntelligence" Content="-" HorizontalAlignment="Left" Margin="212,226,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" Click="removeIntelligence_Click"/>
+        <Button x:Name="removeEndurance" Content="-" HorizontalAlignment="Left" Margin="212,290,0,0" VerticalAlignment="Top" Width="24" FontSize="16" FontWeight="Bold" RenderTransformOrigin="0.632,3.847" Click="removeEndurance_Click"/>
         <Label x:Name="freePoints" Content="10" HorizontalAlignment="Left" Margin="254,347,0,0" VerticalAlignment="Top" FontSize="18" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
         <Label Content="Free points" HorizontalAlignment="Left" Margin="212,316,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.759,-0.893" Width="120" FontSize="16" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontWeight="Bold"/>
         <Button x:Name="buttonAdd" Content="Add" HorizontalAlignment="Left" Margin="362,303,0,0" VerticalAlignment="Top" Width="60" FontSize="14" FontWeight="Bold" Click="buttonAdd_Click"/>
