--- a/WPF_HOME_WORK/MainWindow.xaml
+++ b/WPF_HOME_WORK/MainWindow.xaml
@@ -15,6 +15,9 @@
         <TextBlock HorizontalAlignment="Left" Margin="92,280,0,0" Text="Сила" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"/>
         <Button x:Name="btn_add" Content="Add" HorizontalAlignment="Left" Margin="59,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_add_Click"/>
         <Button x:Name="btn_delete" Content="Delete" HorizontalAlignment="Left" Margin="119,535,0,0" VerticalAlignment="Top" FontSize="20" FontWeight="Bold" Click="btn_add_Click"/>
+        <ListBox x:Name="ListName" Margin="238,41,408,41" Loaded="ListName_Loaded_1"/>
+        <Button x:Name="btn_plus" Content="-" HorizontalAlignment="Left" Margin="59,276,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20" Width="21"/>
+        <Button x:Name="btn_plus_Copy" Content="+" HorizontalAlignment="Left" Margin="155,276,0,0" VerticalAlignment="Top" FontWeight="Bold" FontSize="20"/>
 
     </Grid>
 </Window>
